2010-03-11  Bin Li <bin.li@ricoh-tech.com>

	* PPD/, printer/: Added 42 Postscript and 37 pxlmono PPD files for 42 Ricoh Family Group models.

2010-03-10  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/hplip.xml: Removed information only relevant for
	  generating PPD files, as this entry is not used for generating PPD
	  files. Change done in MySQL database on the OpenPrinting web server
	  and exported.

2010-03-10  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/chp2200.xml,
	  db/source/driver/hpijs-pcl3.xml,
	  db/source/driver/hpijs-pcl5c.xml,
	  db/source/driver/hpijs-pcl5e.xml,
	  db/source/driver/hplip.xml,
	  db/source/driver/min12xxw.xml,
	  db/source/driver/oki4w.xml,
	  db/source/printer/HP-Color_LaserJet_1500.xml,
	  db/source/printer/HP-Color_LaserJet_1600.xml,
	  db/source/printer/HP-Color_LaserJet_2600n.xml,
	  db/source/printer/HP-Color_LaserJet_CP1215.xml,
	  db/source/printer/Kyocera-KM-1635.xml,
	  db/source/printer/Kyocera-KM-2035.xml:
	  The MySQL database on the OpenPrinting web server could not hold
	  "<unit>in</unit>" in margin definitions. Fixed the MySQL database
	  and exported the corrected entries.

2010-03-07  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Brother-HL-2030.xml,
	  db/source/printer/Brother-HL-2035.xml:
	  New entries added to the MySQL database.

	* db/source/driver/gutenprint.xml:
	  Entries modified in the MySQL database.

2010-02-25  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml: Updated to represent version 5.2.5.

2010-02-17  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/cljet5.xml,
	  db/source/opt/PCL-4-5-InputSlot.xml,
	  db/source/opt/PCL-XL-InputSlot.xml,
	  db/source/printer/Brother-PT-2300.xml,
	  db/source/printer/Canon-LBP-3360.xml,
	  db/source/printer/HP-LaserJet_1022.xml,
	  db/source/printer/HP-LaserJet_1022n.xml,
	  db/source/printer/HP-LaserJet_1022nw.xml,