@@ -164,5 +164,8 @@
     <printer>
       <id>printer/Xerox-Phaser_3110</id>
     </printer>
+    <printer>
+      <id>printer/Xerox-Phaser_3124</id>
+    </printer>
   </printers>
 </driver>
