@@ -9,7 +9,11 @@
       </dpi>
     </resolution>
   </mechanism>
-  <functionality>F</functionality>
+  <lang>
+    <proprietary />
+  </lang>
+  <functionality>B</functionality>
+  <driver>gdi</driver>
   <comments>
     <en>
       Throughput = 25
