@@ -1,3 +1,9 @@
+2010-03-12  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Xerox-Phaser_3124.xml, driver/gdi.xml: The Xerox Phaser
+	  3124 works with the Samsung "gdi" driver. Thanks to
+	  sbut (openprinting at mailinator dot com) for the hint.
+
 2010-03-11  Bin Li <bin.li@ricoh-tech.com>
 
 	* PPD/, printer/: Added 42 Postscript and 37 pxlmono PPD files for 42 Ricoh Family Group models.
